--- a/Argon/Views/Home/NewsPaper.cshtml
+++ b/Argon/Views/Home/NewsPaper.cshtml
@@ -78,7 +78,7 @@
         <h1 class="text-center mb-4">Haberler Yönetimi</h1>
         <div class="card shadow">
             <div class="card-header bg-primary text-white">
-                <h4 class="mb-0">Haberler Tablosu</h4>
+                <h4 class="mb-0">Qazetler Tablosu</h4>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -158,7 +158,7 @@
                         <td>${index + 1 + page * 5}</td>
                         <td>${newsItem.newspaperTitle}</td>
                         <td>
-                            ____
+                         <img src="${newsItem.newspaperCoverUrl ? 'https://localhost:44314/' + newsItem.newspaperCoverUrl : ''}" alt="Haber Fotoğrafı" style="width: 50px; height: 50px; object-fit: cover;">
                         </td>
                         <td>${new Date(newsItem.newspaperDate).toLocaleDateString()}</td>
                         <td>
@@ -167,10 +167,8 @@
                             </span>
                         </td>
                         <td>
-                                <a href="#" class="text-dark me-2 btn">
-                                    <i class="fa-solid fa-eye"></i>
-                                </a>
-                                <a href="/Home/PutNews/${newsItem.newspaperId}" class="text-primary me-2 btn">
+                                
+                                <a href="/Home/PutNewsPaper/${newsItem.newspaperId}" class="text-primary me-2 btn">
                                     <i class="fa-solid fa-pen"></i>
                                 </a>
                                 <a class="text-danger deleteNews btn" data-id="${newsItem.newspaperId}">
