--- a/Argon/Views/Shared/_Sidebar.cshtml
+++ b/Argon/Views/Shared/_Sidebar.cshtml
@@ -46,6 +46,24 @@
                     <span class="nav-link-text ms-1">Qəzet</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/Home/Infographics">
+                    <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-photo-film" style="color:black;"></i>
+
+                    </div>
+                    <span class="nav-link-text ms-1">Infoqrafika</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/Home/YtVideos">
+                    <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="fa-brands fa-youtube" style="color:black;"></i>
+
+                    </div>
+                    <span class="nav-link-text ms-1">Youtube Videolari</span>
+                </a>
+            </li>
             <li class="nav-item mt-3">
                 <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
             </li>
