--- a/Argon/Views/Home/Index.cshtml
+++ b/Argon/Views/Home/Index.cshtml
@@ -104,8 +104,7 @@
                     <div class="card-header pb-0 pt-3 bg-transparent">
                         <h6 class="text-capitalize">Sales overview</h6>
                         <p class="text-sm mb-0">
-                            <i class="fa fa-arrow-up text-success"></i>
-                            <span class="font-weight-bold">4% more</span> in 2021
+                             2021
                         </p>
                     </div>
                     <div class="card-body p-3">
@@ -360,7 +359,7 @@
     new Chart(ctx1, {
       type: "line",
       data: {
-        labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+        labels: ["Yanvar", "Fevral", "Mart", "Aprel", "May", "Iyun", "Iyul", "Sentyabr", "Oktyabr","Noyabr","Dekabr"],
         datasets: [{
           label: "Mobile apps",
           tension: 0.4,
@@ -370,7 +369,7 @@
           backgroundColor: gradientStroke1,
           borderWidth: 3,
           fill: true,
-          data: [50, 40, 300, 220, 500, 250, 400, 230, 500],
+          data: [50, 40, 300, 220, 500, 250, 400, 230, 500,278,321,83],
           maxBarThickness: 6
 
         }],
